--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <label for="currency">
               <span class="container__label"> Wybierz walutę :</span>
               <select name="currency_choice" id="currency" class="container__input js-container">
-                <option value="EUR" class="container__euro" selected>Euro</option>
+                <option value="EUR" class="container__euro" selected>EUR</option>
                 <option value="USD" class="container__usd">USD</option>
                 <option value="GBP" class="container__gbp">GBP</option>
               </select>
