--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <section class="container">
-      <h1 class="container__header">Kalkulator walut</h1>
+      <h1 class="container__header">Kalkulator walutt</h1>
       <form class="container__form js-form">
         <fieldset class="container_fieldset">
           <legend>Twoje dane</legend>
